--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
   <div class="main-content">
     {{>header}}
-    <img class="portrait" src="/img/bunny.png" alt="Bunny image">
+    <img class="portrait" src="/img/Bunny.png" alt="Bunny image">
   </div>
 
   {{>footer}}
