--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
   <div class="main-content">
     {{>header}}
+    <p>This site was craeted by Snubtac. It uses data from mapbox.com and openweather.org!</p>
     <img class="portrait" src="/img/Bunny.png" alt="Bunny image">
   </div>
 
